; ModuleID = '/home/carl/AnghaBench/tmux/compat/extr_imsg.c_imsg_compose.c'
source_filename = "/home/carl/AnghaBench/tmux/compat/extr_imsg.c_imsg_compose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imsgbuf = type { i32 }
%struct.ibuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @imsg_compose(%struct.imsgbuf* %0, i32 %1, i32 %2, i32 %3, i32 %4, i8* %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.imsgbuf*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca %struct.ibuf*, align 8
  store %struct.imsgbuf* %0, %struct.imsgbuf** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i8* %5, i8** %14, align 8
  store i32 %6, i32* %15, align 4
  %17 = load %struct.imsgbuf*, %struct.imsgbuf** %9, align 8
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %11, align 4
  %20 = load i32, i32* %12, align 4
  %21 = load i32, i32* %15, align 4
  %22 = call %struct.ibuf* @imsg_create(%struct.imsgbuf* %17, i32 %18, i32 %19, i32 %20, i32 %21)
  store %struct.ibuf* %22, %struct.ibuf** %16, align 8
  %23 = icmp eq %struct.ibuf* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %7
  store i32 -1, i32* %8, align 4
  br label %39

25:                                               ; preds = %7
  %26 = load %struct.ibuf*, %struct.ibuf** %16, align 8
  %27 = load i8*, i8** %14, align 8
  %28 = load i32, i32* %15, align 4
  %29 = call i32 @imsg_add(%struct.ibuf* %26, i8* %27, i32 %28)
  %30 = icmp eq i32 %29, -1
  br i1 %30, label %31, label %32

31:                                               ; preds = %25
  store i32 -1, i32* %8, align 4
  br label %39

32:                                               ; preds = %25
  %33 = load i32, i32* %13, align 4
  %34 = load %struct.ibuf*, %struct.ibuf** %16, align 8
  %35 = getelementptr inbounds %struct.ibuf, %struct.ibuf* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 4
  %36 = load %struct.imsgbuf*, %struct.imsgbuf** %9, align 8
  %37 = load %struct.ibuf*, %struct.ibuf** %16, align 8
  %38 = call i32 @imsg_close(%struct.imsgbuf* %36, %struct.ibuf* %37)
  store i32 1, i32* %8, align 4
  br label %39

39:                                               ; preds = %32, %31, %24
  %40 = load i32, i32* %8, align 4
  ret i32 %40
}

declare dso_local %struct.ibuf* @imsg_create(%struct.imsgbuf*, i32, i32, i32, i32) #1

declare dso_local i32 @imsg_add(%struct.ibuf*, i8*, i32) #1

declare dso_local i32 @imsg_close(%struct.imsgbuf*, %struct.ibuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
